# advent-of-code-submissions-2023

./: .gitignore  Makefile  Pipfile  README.md  skypilot.yaml
day10_DVC/: README.md  dvc.yaml
day10_DVC/data/: .gitignore
day10_DVC/scripts/: evaluate.py  preprocess.py  split.py  train.py
day11_phoenix/: README.md  phoenix_langchain.py  phoenix_umap.py  pyproject.toml
day12-trulens/: README.md  langchain_quickstart.ipynb  pyproject.toml  trulens_eval.ipynb  trulens_explain.ipynb
day13-openllm/: README.md  pyproject.toml  query_openllm.py
day14_LabelStudio/: README.md
day15_llamaindex/: README.md
day16_LLMWare/: README.md
day17_DeterminedAI/: README.md
day18_paimon/: README.md
day19_vectorflow/: README.md
day1_milvus/: README.md  milvus_evals_build_better_rags.ipynb  pyproject.toml
day20_pachyderm/: README.md  pyproject.toml
day21_gptcache/: README.md
day22_ray/: README.md
day23_supergradients/: README.md
day24_temporian/: README.md
day2_fiftyone/: README.md  launch_fiftyone.py  pyproject.toml
day3/: README.md  quivr.md
day3-quivr/: README.md
day4-haystack/: 19_Text_to_Image_search_pipeline_with_MultiModal_Retriever.ipynb  Pipfile  README.md
day5-proton/: Pipfile  README.md
day6-ydata-synthetic/: Pipfile  README.md  run_streamlit.py  ydata_profiling_and_synthetic.py
day7-flink/: README.md
day8_langchainRB/: README.md
day9_flyte_orchestrator/: .gitignore  README.md  easy_flow.py  flyte_flow.py  prefect_flow.py  pyproject.toml
day9_flyte_orchestrator/data/: .gitignore  test.csv  train.csv
day9_flyte_orchestrator/scripts/: evaluate.py  preprocess.py  split.py
