[tool.poetry]
name = "day11-phoenix"
version = "0.1.0"
description = ""
authors = ["Michaël Romagné <michael.romagne@gitguardian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12" 
arize-phoenix = {extras = ["experimental"], version = "^1.8.0"}
pandas = "^2.1.4"
numpy = "^1.26.2"
langchain = "^0.0.348"
openai = "^1.3.8"
tiktoken = "^0.5.2"
scikit-learn = "<1.3.0"
ipython = "^8.18.1"
matplotlib = "^3.8.2"
pycm = "^4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
