[tool.poetry]
name = "day12-trulens"
version = "0.1.0"
description = ""
authors = ["Michaël Romagné <michael.romagne@gitguardian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
trulens-eval = "^0.18.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
