[tool.poetry]
name = "day9-flyte"
version = "0.1.0"
description = ""
authors = ["Michaël Romagné <michael.romagne@gitguardian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
prefect = "^2.14.10"
dvc = "^3.33.3"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
